<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="closebracket">)</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="multiply">×</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="u00f7">÷</string>
    <string name="u03d6">ϖ</string>
    <string name="e">e</string>
    <string name="openbracket">(</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="u221a">√</string>
    <string name="power">^</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
</resources>